--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 keywords = ["rename utility", "cli", "rename", "batch", "command line utilities"]
 categories = ["command-line-utilities", "development-tools::cargo-plugins"]
+license = "MIT"
+description = "A cli tool to batch rename all the files in the provided directory"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
