--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ keywords = ["rename-utility", "cli", "rename", "batch", "command"]
 categories = ["command-line-utilities", "development-tools::cargo-plugins"]
 license = "MIT"
 description = "A cli tool to batch rename all the files in the provided directory"
+readme = "readme.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
