--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "rename-gru"
 version = "0.1.2"
 edition = "2021"
 keywords = ["rename-utility", "cli", "rename", "batch", "command"]
-categories = ["command-line-utilities", "development-tools::cargo-plugins"]
+categories = ["command-line-utilities"]
 license = "MIT"
 description = "A cli tool to batch rename all the files in the provided directory"
 readme = "readme.md"
