--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rename-gru"
-version = "0.5.0"
+version = "0.6.0"
 edition = "2021"
 keywords = ["rename-utility", "cli", "rename", "batch", "command"]
 categories = ["command-line-utilities"]
@@ -10,17 +10,17 @@ readme = "readme.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.34"
-clap = { version = "4.5.1", features = ["derive"] }
-file-id = "0.2.1"
-rand = "0.8.5"
-renamore = "0.3.2"
-serde_json = "1.0.113"
-
+chrono = "0.4"
+clap = { version = "4.5", features = ["derive"] }
+file-id = "0.2"
+rand = "0.8"
+renamore = "0.3"
+serde_json = "1.0"
+crc32fast = "1.4"
 
 [profile.release]
-opt-level = 'z'     # Optimize for size
-lto = true          # Enable link-time optimization
-codegen-units = 1   # Reduce number of codegen units to increase optimizations
-panic = 'abort'     # Abort on panic
-strip = true        # Strip symbols from binary
+opt-level = 'z'   # Optimize for size
+lto = true        # Enable link-time optimization
+codegen-units = 1 # Reduce number of codegen units to increase optimizations
+panic = 'abort'   # Abort on panic
+strip = true      # Strip symbols from binary
