--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ categories = ["command-line-utilities"]
 license = "MIT"
 description = "A cli tool to batch rename all the files in the provided directory"
 readme = "readme.md"
+repository = "https://github.com/G1ya777/GRU"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
