--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "rename-gru"
-version = "0.8.1"
+version = "0.8.2"
 edition = "2021"
 keywords = ["rename-utility", "cli", "rename", "batch", "command"]
 categories = ["command-line-utilities"]
 license = "MIT"
-description = "A cli tool to batch rename all the files in the provided directory"
+description = "A CLI tool to batch rename files in the provided directory"
 readme = "readme.md"
 repository = "https://github.com/G1ya777/GRU"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
